# open_maeve

./: .hgignore  .hgtags  LICENSE.md  README.md
actuators/: README.md
actuators/adafruit_pca9685/: CMakeLists.txt  package.xml  setup.py
actuators/human_interface/: CMakeLists.txt  README.md  package.xml
build_utilities/: CMakeLists.txt  package.xml  rosdoc.yaml
build_utilities/scripts/: clang-format-recursive.sh  merge-compile-commands.py  pep8-format-recursive.sh
build_utility_scripts/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
build_utility_scripts/scripts/: clang-format-recursive.sh  make-eclipse-projects.sh  merge_compile_commands.py
cmake/: CMakeLists.txt
contracts/: README.md
contracts/maeve_primitive_contracts/: CMakeLists.txt  package.xml
controllers/: README.md
controllers/adafruit_pca9685/: CMakeLists.txt  README.md  package.xml  setup.py
controllers/cisp_controller/: CMakeLists.txt  package.xml
controllers/controller_interface_msgs/: CMakeLists.txt  README.md  package.xml
controllers/isp_controller/: CMakeLists.txt  README.md  package.xml
controllers/isp_controller_2d/: CMakeLists.txt  README.md  package.xml
controllers/joystick_controller_2D/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml  setup.py
controllers/joystick_controller_2d/: CMakeLists.txt  README.md  package.xml  setup.py
controllers/lat_lon_joystick/: CMakeLists.txt  README.md  package.xml  setup.py
controllers/rpi_piezo_buzzer/: CMakeLists.txt  README.md  package.xml  setup.py
data_processing/: README.md
data_processing/karlsruhe_dataset_publisher/: CMakeLists.txt  README.md  package.xml
data_processing/segmentation_taxonomy/: CMakeLists.txt  README.md  package.xml
data_processing/sequence_to_bag/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
graveyard/: README.md
graveyard/feature_flow/: CMakeLists.txt  README.md  package.xml
graveyard/maeve_expansion_segmentation/: CMakeLists.txt  README.md  package.xml
graveyard/maeve_expansion_segmentation/include/maeve_core/maeve_expansion_segmentation/: connected_component_tracking.h
graveyard/maeve_expansion_segmentation/include/open_maeve/maeve_expansion_segmentation/: connected_component_tracking.h
graveyard/maeve_expansion_segmentation/launch/: launch.launch
graveyard/maeve_expansion_segmentation/rviz_configs/: config.rviz
graveyard/maeve_expansion_segmentation/src/: maeve_expansion_segmentation_node.cpp
graveyard/maeve_expansion_segmentation/src/maeve_expansion_segmentation/: connected_component_tracking.cpp  node_handler.cpp  node_handler.h  params.cpp  params.h
graveyard/perception_interface_msgs/: CMakeLists.txt  package.xml
maeve_dynamics/: CMakeLists.txt  README.md  package.xml
maeve_dynamics/scripts/: README.md  constraint-functions.R  plot-json.R  plotting-functions.R
maeve_dynamics/test/: test_interval_constraints.cpp  test_parabola.cpp  test_pst_connector.cpp  test_pst_reachability.cpp  test_simple.cpp
maeve_geometry/: CMakeLists.txt  README.md  package.xml
maeve_geometry/test/: test_aabb.cpp  test_bounds_ordered_interval.cpp  test_comparisons.cpp  test_conversions.cpp  test_disjoint_interval.cpp  test_flow.cpp  test_interval.cpp  test_optical_flow.cpp  test_parabola.cpp  test_partitioned_interval.cpp  test_polynomial.cpp  test_powers.cpp  test_quadratic.cpp  test_tau.cpp
maeve_macros/: CMakeLists.txt  README.md  package.xml
maeve_macros/test/: test_maeve_macros.cpp
maeve_queues/: README.md
maeve_queues/maeve_message_queue/: CMakeLists.txt  README.md  package.xml
maeve_queues/maeve_time_queue/: README.md  package.xml
maeve_queues/odom_time_queue/: package.xml
maeve_time_queue/: CMakeLists.txt  README.md  package.xml
maeve_time_queue/test/: test_maeve_time_queue.cpp
optical_flow/encroachment_detection/: CMakeLists.txt  README.md  package.xml  setup.py
optical_flow/feature_flow/: CMakeLists.txt  package.xml
optical_flow/maeve_expansion_segmentation/: CMakeLists.txt  README.md
optical_flow/maeve_flow/: CMakeLists.txt  package.xml  setup.py
optical_flow/simple_dilation_detection/: CMakeLists.txt  README.md  package.xml  setup.py
perception/: README.md
perception/ar_cisp_field/: CMakeLists.txt  README.md  package.xml
perception/ar_isp_field/: CMakeLists.txt  README.md  package.xml
perception/cisp_field/: CMakeLists.txt  README.md  package.xml
perception/isp_field/: CMakeLists.txt  README.md  package.xml
perception/optical_flow/: README.md
perception/optical_flow/encroachment_detection/: CMakeLists.txt  README.md  package.xml
perception/optical_flow/encroachment_detection/launch/: launch.launch
perception/optical_flow/encroachment_detection/params/: params.yaml
perception/optical_flow/encroachment_detection/src/: encroachment_detection.py
perception/perception_interface_msgs/: CMakeLists.txt  README.md  package.xml
planning/: README.md
planning/pst_planning/: CMakeLists.txt  package.xml
robots/: README.md
robots/donkey_car/: README.md
robots/donkey_car/donkey_bringup/: CMakeLists.txt  README.md  package.xml
robots/donkey_car/donkey_bringup/launch/: encroachment_buzzer.launch  remap_encroachment_to_buzzer.launch  visual_servoing.launch
ros_parameter_loading/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml  setup.py
ros_parameter_loading/src/: ros_parameter_loading.py
scripts/: make-eclipse-projects.sh  merge_compile_commands.py
sensors/: README.md
sensors/maeve_cameras/: CMakeLists.txt  README.md  package.xml
struck_visual_tracking/: CMakeLists.txt  README.md  package.xml
struck_visual_tracking/src/: Config.cpp  HaarFeature.h  HaarFeatures.cpp  HistogramFeatures.cpp  ImageRep.h  LaRank.cpp  LaRank.h  RawFeatures.cpp  Sample.h  Sampler.cpp  Sampler.h  Tracker.cpp  struck_visual_tracking.cpp
struck_visual_tracking_interface/: CMakeLists.txt  package.xml
struck_visual_tracking_interface/msg/: ImageBoundingBox.msg  image_bounding_box.msg  (+1 more)
struck_visual_tracking_node/: CMakeLists.txt  package.xml
time_queues/: README.md
visual_servoing/: README.md
visual_tracking/: README.md
(+450 files in other folders)
